finally got viewing indexing - fixed issue with slow database lookup - got posters displaying correctly, even on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,3 +81,11 @@ form {
   border-radius: 3px;
   vertical-align: text-top;
 }
+
+.viewing.mini {
+  margin-bottom: 20px;
+}
+.poster {
+  width: 100%;
+  max-width: 200px;
+}
